--- a/archives/zhihu-search/2024-01-08.md
+++ b/archives/zhihu-search/2024-01-08.md
@@ -1,9 +1,10 @@
 # 2024-01-08
 
-共 13 条
+共 14 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Mon Jan 08 2024 15:00:55 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Jan 08 2024 16:00:38 GMT+0800 (China Standard Time) -->
+1. [金球奖](https://www.zhihu.com/search?q=金球奖)
 1. [老师怎么看出来作文是抄的](https://www.zhihu.com/search?q=老师怎么看出来作文是抄的)
 1. [AI智能写作哪个好](https://www.zhihu.com/search?q=AI智能写作哪个好)
 1. [大学老师逆天发言](https://www.zhihu.com/search?q=大学老师逆天发言)
